fix css overflow bug to show the scrollbar only when needed

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,8 @@ input {
     flex-direction: column;
     gap: 3.2rem;
     align-items: center;
+
+    overflow: auto;
 }
 
 .actions button,
@@ -101,7 +103,6 @@ input {
 .list ul {
     list-style: none;
     width: 80%;
-    overflow: scroll;
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
